[tool.poetry]
name = "lob-management"
version = "0.1.0"
description = "Repository organization tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "lob_management"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
